RESOLVED FIXED260102
[macOS] drawFocusIfNeeded() should not expose the user's system accent color
https://bugs.webkit.org/show_bug.cgi?id=260102
Summary [macOS] drawFocusIfNeeded() should not expose the user's system accent color
Wenson Hsieh
Reported 2023-08-11 15:17:21 PDT
Attachments
Wenson Hsieh
Comment 1 2023-08-13 12:17:27 PDT
EWS
Comment 2 2023-08-14 15:34:15 PDT
Committed 266881@main (04c640bb1dce): <https://commits.webkit.org/266881@main> Reviewed commits have been landed. Closing PR #16649 and removing active labels.
Tim Nguyen (:ntim)
Comment 3 2023-09-24 04:57:13 PDT
*** Bug 252766 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.